@@ -1,4 +1,9 @@
-2002-07-11  Brian Cameron  <Brian.Cameron@sun.ie>
+2002-07-12  Brian Cameron  <Brian.Cameron@sun.com>
+
+	* gconf/gconfd.c
+	Removed reference to gnome_segv2 since it was not used.
+
+2002-07-11  Brian Cameron  <Brian.Cameron@sun.com>
 
 	* gconf-2.0.pc.in
 	* gconf.spec.in
